Changed models, added DTOs, working data fetching from shoptet